[package]
name = "explorers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
rand_distr = "0.5.1"
thiserror = "2.0.18"
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }
h3o = { version = "0.7.1" }
geo-types = "0.7"
geo = "0.30"
ordered-float = "5.0.0"
hashbrown = "0.15"
bon = "3.7.0"
num-traits = "0.2.19"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
